<resources>
    <string name="app_name">Bakery Lovers</string>
    <string name="title_products_widget">Bakery Lovers Products</string>
    <string name="title_fragment_main">Browse Our Menu</string>
    <string name="title_fragment_product">Product Detail</string>
    <string name="title_fragment_order">Your Orders</string>
    <string name="title_fragment_order_placed">That\'s it!</string>
    <string name="title_fragment_review_order">Your Cart</string>
    <string name="title_fragment_confirm">Confirm Order</string>
    <string name="title_update_amount_order">How Many?</string>
    <string name="title_product_image">Product Image</string>
    <string name="title_product_amount_edit">Edit product amount</string>
    <string name="title_browse_menu">Browse Menu</string>
    <string name="title_your_orders">Your Orders</string>
    <string name="title_account_section">Account</string>
    <string name="title_logout">Logout</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="prompt_full_name">Full name</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_review_order">Review your order</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_repeated_password">This password doesn\'t match the previous</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_unable_to_register">Something went wrong with your registration process.</string>
    <string name="error_unable_to_login">Something went wrong with your login process.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="text_new_user">New user?</string>
    <string name="text_click_here">Click here.</string>
    <string name="error_unable_to_logout">Something went wrong. Unable to logout.</string>
    <string name="text_register_success">Your registration was successful, you can login now.</string>


    <!-- string related to main activities -->
    <string name="message_order_placed">You order was placed, we will send you a notification when is arriving.</string>
    <string name="error_order_not_placed">Sorry, we couldn\'t process your order. Try again or contact support.</string>
    <string name="permission_location">We need permissions to access your location.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_profile_photo_desc">Profile photo</string>
    <string name="product_not_available">Product not available</string>
    <string name="product_add_to_cart">Add this product to your cart</string>
    <string name="product_added_to_cart">This product was added to your cart</string>
    <string name="msg_product_added_to_cart">You already added this to your cart.</string>
    <string name="text_select_address">Please select a deliver address to continue with your order.</string>
    <string name="text_order_delivered">Delivered</string>
    <string name="text_order_placed">Placed</string>
    <string name="text_orders_empty">You don\'t have any orders yet.</string>
    <string name="text_products_empty">No products are available for the moment.</string>
    <string name="text_cart_empty">Your cart is empty.</string>
    <string name="text_network">Looks like you are not connected to internet, try checking your settings.</string>

    <!-- string related to actions -->
    <string name="action_cancel">Cancel</string>
    <string name="action_location">Pick deliver location</string>
    <string name="action_place_order">Place order</string>
    <string name="action_update">Update</string>
    <string name="action_remove">Remove</string>
    <string name="action_search">Search</string>
    <string name="action_view_all">View all</string>
    <string name="action_view_less">View less</string>
    <string name="action_settings">Settings</string>

    <!-- string related to product details -->
    <string name="label_price">Price:</string>
    <string name="label_calories">Calories:</string>
    <string name="label_price_with_var">Price: %1$s</string>
    <string name="label_calories_with_var">Calories: %1$s</string>
    <string name="label_order_number">Order #%1$d</string>
    <string name="label_address_with_var">Address: %1$s</string>
    <string name="label_address">Address:</string>
    <string name="label_items_subtotal">Items subtotal:</string>
    <string name="label_delivery">Delivery:</string>
    <string name="label_total_items">Total items:</string>
    <string name="label_total_with_var">Total: %1$s</string>
    <string name="label_total_order">Total order:</string>
    <string name="label_description">Description</string>
    <string name="label_qty">Qty.</string>
    <string name="label_subtotal">Subtotal</string>

    <!-- string related to preferences -->
    <string name="preference_session_file_key" translatable="false">com.nanodegree.gaby.bakerylovers.PREFERENCE_SESSION_FILE_KEY</string>
    <string name="pref_logged_email_key" translatable="false">LOGGED_EMAIL_KEY</string>
    <string name="pref_logged_name_key" translatable="false">LOGGED_NAME_KEY</string>
    <string name="pref_session_id_key" translatable="false">SESSION_ID_KEY</string>
    <string name="pref_user_id_key" translatable="false">LOGGED_USER_ID</string>
    <string name="pref_user_photo_key" translatable="false">LOGGED_USER_PHOTO</string>
    <string name="pref_pending_products_update_key" translatable="false">PRODUCTS_UPDATE_KEY</string>
    <string name="pref_pending_orders_update_key" translatable="false">ORDERS_UPDATE_KEY</string>
</resources>
