<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.ConfirmOrderFragment">
    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:id="@+id/header_layout"
        android:background="@color/colorHeader"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/Label.DarkGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/label_qty"/>
        <TextView
            style="@style/Label.DarkGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="4"
            android:text="@string/label_description"/>
        <TextView
            style="@style/Label.DarkGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:text="@string/label_subtotal"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_current_order"
        android:scrollbars="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_layout"
        android:layout_above="@+id/divider_view"/>
    <View
        android:id="@+id/divider_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height_large"
        android:layout_above="@+id/total_grid"
        android:background="@color/textPrimary"/>

    <LinearLayout
        android:id="@+id/total_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin">
            <TextView
                style="@style/Label.DarkGray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:textAlignment="viewStart"
                android:layout_weight="1"
                android:text="@string/label_address" />
            <TextView
                style="@style/BodyText.DarkGray"
                android:id="@+id/text_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin">

        <TextView
            style="@style/Label.DarkGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:text="@string/label_items_subtotal" />
        <TextView
            style="@style/Label.DarkGray"
            android:id="@+id/text_subtotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="italic" />
        <TextView
            style="@style/Label.DarkGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:text="@string/label_delivery"/>
        <TextView
            style="@style/Label.DarkGray"
            android:id="@+id/text_delivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            style="@style/Label.DarkGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:text="@string/label_total_items" />

        <TextView
            style="@style/Label.DarkGray"
            android:id="@+id/text_total_items"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="italic" />
        <TextView
            style="@style/Label.DarkGray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:layout_weight="1"
            android:text="@string/label_total_order"/>
        <TextView
            style="@style/Label.DarkGray"
            android:id="@+id/text_total_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>